--- a/style.css
+++ b/style.css
@@ -55,8 +55,18 @@ h1 {
   text-align: center;
 }
 
-.preview-container img {
+.preview-container img,
+canvas {
   max-width: 100%;
   border-radius: 12px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin-top: 1rem;
+}
+
+a.tile {
+  display: inline-block;
+  margin-top: 1rem;
+  text-decoration: none;
+  background-color: #6C5CE7;
+  color: white;
 }
